# OrchestratorEngine

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  core-bug.yml  integration-finding.yml  runtime-report.yml
.github/workflows/: ci.yml
benchmarks/: coordination_context.py
docs/: adopter-upgrade-checklist.md  adoption-paradigmarium.md  codex-in-turn-continuation.md  contracts.md  coordination-efficiency.md  hosts.md  operator-reporting.md  project-adoption.md  setup-guide.md  upgrade-guide.md  verification-policy.md  worker-policies.md
docs/assets/: coordination-context.json
examples/: check_runner.py  codex-current-thread-watcher.md  workers.toml
examples/policies/: quality-efficient.md
examples/prompts/: adopter-report-worker.md  implementation-worker.md  review-worker.md  verification-worker.md
src/orchestrator_engine/: __init__.py  adoption.py  artifact_resolution.py  binding.py  claude_stream.py  cli.py  codex_app.py  core.py  diagnostics.py  host_capabilities.py  schemas.py  status.py  task_diagnostics.py  task_resolution.py  telemetry_adapters.py  upgrade.py  verification.py  vscode_chat.py  wakeup.py  watcher.py  worker_diagnostics.py  worker_lease.py  worker_policy.py  workers.py
src/orchestrator_engine/schemas/: artifact-resolution.json  binding.json  inbox-signal.json  task-resolution.json  terminal-event.json  verification-result.json  wake-target.json  worker-cancel-request.json  worker-control-ack.json  worker-dispatch-claim.json  worker-evidence.json  worker-handoff.json  worker-lease.json  worker-output-manifest.json  worker-policy-snapshot.json  worker-queue-entry.json  worker-result.json  worker-task-intent.json  worker-task.json  worker-usage.json
tests/: test_adoption.py  test_artifact_resolution.py  test_binding.py  test_check_runner.py  test_cli.py  test_coordination_benchmark.py  test_core.py  test_diagnostics.py  test_host_capabilities.py  test_install_smoke.py  test_release_consistency.py  test_schemas.py  test_status.py  test_stream.py  test_task_diagnostics.py  test_task_resolution.py  test_upgrade.py  test_verification.py  test_watcher.py  test_worker_availability.py  test_worker_control.py  test_worker_diagnostics.py  test_worker_lease.py  test_worker_policy.py  test_worker_telemetry.py  test_workers.py
tests/fixtures/schemas/invalid/: artifact-resolution.json  binding.json  task-resolution.json  terminal-event.json  wake-target.json
tests/fixtures/schemas/valid/: artifact-resolution.json  binding.json  inbox-signal.json  task-resolution.json  terminal-event.json  verification-result.json  wake-target.json  worker-cancel-request.json  worker-control-ack.json  worker-dispatch-claim.json  worker-evidence.json  worker-handoff.json  worker-lease.json  worker-output-manifest.json  worker-policy-snapshot.json  worker-queue-entry.json  worker-result.json  worker-task-intent.json  worker-task.json  worker-usage.json
tools/: check_release_consistency.py
