[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-engine"
version = "0.5.1"
description = "Portable local event-driven coordination layer for AI agents and CLI workers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Oleg Synelnykov (Jafa7)" }]
keywords = [
    "ai-agents",
    "orchestration",
    "multi-agent",
    "claude",
    "codex",
    "copilot",
    "automation",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Jafa7/OrchestratorEngine"
Documentation = "https://github.com/Jafa7/OrchestratorEngine/tree/main/docs"
Changelog = "https://github.com/Jafa7/OrchestratorEngine/blob/main/CHANGELOG.md"
Issues = "https://github.com/Jafa7/OrchestratorEngine/issues"

[project.optional-dependencies]
test = ["jsonschema>=4.18,<5"]

[project.scripts]
orchestrator-engine = "orchestrator_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "tools",
    "docs",
    "benchmarks",
    "examples",
    "README.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "SIM", "UP"]
